# gptdemo

./: .gitignore  Dockerfile  README.html  README.md  pyproject.toml  requirements.txt  startup.bat  startup.sh  transcript.txt  web.config
.github/workflows/: gpt-demo-stremlit-docker.yml  master_gpt-demo-streamlit-2.yml  master_gpt-demo-stremlit.yml  master_test-gpt-demo-stremlit.yml  master_test-gpt-demo.yml
gptdemo/: 01_ChatGPT@2デジ.py  01_ChatGPT_DEMO.py
gptdemo/data/qa/: virusQA.xlsx
gptdemo/libs/: aoai_test.py  config.py  exsample_selector.py  simple_chat_respomse.py  simple_chat_response.py  townpageGPT.py
gptdemo/pages/: 02_社内文書検索(デモ).py  03_(開発中)TownPageGPT.py  03_TownPageGPT(デモ).py  03_画像解析.py  04_WebChatGPT(デモ).py  05_(開発中)TownPageGPT.py  05_FAQ回答(デモ).py  05_FAQ回答.py  05_画像生成.py  05_目安箱.py  06_画像解析.py  08(開発中)WebChatGPT.py  09_(開発中)FastAPI動作確認.py  10_ (開発中)非同期処理テスト.py  11_Gemini.py  13_LangSmith.py  14_クラウドコスト計算.py  15_Gemini動画解釈.py  97_目安箱.py  98_ChatGPT_DEMO_NonMemory.py  99_ChatGPT_DEMO_old.py
jupyter/: README.md  stream_test.ipynb
k8s/: ReadMe.md
