[tool.poetry]
name = "gptdemo"
version = "0.1.0"
description = ""
authors = ["nahrun1682 <kawamura100995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
langchain = "^0.0.285"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
azure-identity = "^1.14.0"
openpyxl = "^3.1.2"
chromadb = "^0.4.15"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
audio-recorder-streamlit = "^0.0.8"
streamlit-audiorec = "^0.1.3"
bs4 = "^0.0.1"
lxml = "^4.9.3"
google-api-python-client = "^2.107.0"
html2text = "^2020.1.16"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
